# esp32-wifi-penetration-tool

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  TODO.md  _config.yml  sdkconfig  sdkconfig.defaults
components/attack/: CMakeLists.txt  attack.c
components/bluetooth/: BLEAddress.h  BLEAdvertisedDevice.h  BLEAdvertising.cpp  BLEAdvertising.h  BLECharacteristic.cpp  BLECharacteristic.h  BLEClient.cpp  BLEClient.h  BLEDescriptor.cpp  BLEDescriptor.h  BLEDescriptorMap.cpp  BLEDevice.cpp  BLEDevice.h  BLEEddystoneTLM.cpp  BLEEddystoneURL.cpp  BLERemoteCharacteristic.cpp  BLERemoteCharacteristic.h  BLERemoteDescriptor.h  BLERemoteService.cpp  BLEScan.cpp  BLEScan.h  BLESecurity.h  BLEServer.cpp  BLEServer.h  BLEService.cpp  BLEService.h  BLEUUID.h  BLEUtils.cpp  BLEUtils.h  CMakeLists.txt  FreeRTOS.cpp  FreeRTOS.h  GeneralUtils.cpp  GeneralUtils.h
components/bluetooth_serial/: CMakeLists.txt  bluetooth_serial.cpp  bluetooth_serial.h  bt_logs_forwarder.cpp  bt_logs_forwarder.h  ring_buffer.cpp  ring_buffer.h
components/deauther/: CMakeLists.txt  README.md  deauther.c
components/ota/: CMakeLists.txt  component.mk  ota.cpp  ota.h
components/ota/server_certs/: ca_cert.pem
components/webserver/: CMakeLists.txt  README.md  pages.h  webserver.c  webserver.cpp
components/webserver/include/: pages.h
components/webserver/interface/: webserver.h
components/webserver/pages/: page_index.h  page_result.h
components/webserver/utils/: convert_html_to_header_file.py  convert_html_to_header_file.sh  index.html
components/wsl_bypasser/: CMakeLists.txt  README.md  WiFiFramesSender.cpp  wsl_bypasser.c
components/wsl_bypasser/interface/: WiFiFramesSender.h  wsl_bypasser.h
doc/: ATTACKS_THEORY.md
main/: BufferedLogger.cpp  BufferedLogger.h  CMakeLists.txt  Kconfig  Kconfig.projbuild  MacContainer.cpp  MacContainer.h  README.md  Timer.cpp  Timer.h  attack.c  attack.cpp  attack.h  attack_dos.c  attack_dos.cpp  attack_dos.h  attack_handshake.c  attack_handshake.cpp  attack_handshake.h  attack_method.c  attack_method.cpp  attack_method.h  attack_pmkid.c  attack_pmkid.cpp  attack_pmkid.h  bluetooth.cpp  bluetooth.h  bt_logs_forwarder.cpp  bt_logs_forwarder.h  main.c  main.cpp  serial_command_dispatcher.cpp  serial_command_dispatcher.h
partition_table/: partitions_two_ota.csv
utils/: .gitignore  convert_html_to_header_file.sh  index.html  result.html
(+63 files in other folders)
